--- a/.github/workflows/tag-stable-commit.yml
+++ b/.github/workflows/tag-stable-commit.yml
@@ -14,7 +14,7 @@ jobs:
    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     permissions:
-      contents: read # Needed for commit search via the API
+      contents: write # Needed for creating tags
     steps:
      - name: Checkout repository
        uses: actions/checkout@v4
@@ -22,7 +22,8 @@ jobs:
      - name: Install MicroCeph snap
        run: |
         sudo snap install microceph
-    # Find the first name under “channels:” that includes "/stable:" and parse <code name>, <release version> and <commit ID>
+    # Find the first name under "channels:" that includes "/stable:"
+    # and parse <code name>, <release version> and <commit ID>
      - name: Extract channel information
        id: snap
        uses: actions/github-script@v7
@@ -48,7 +49,7 @@ jobs:
             core.info(`Channel line: "${channelRaw}"`);
             // Parse version, and commit ID
             const m = channelRaw.match(
-              /^\s*([a-z]+)\/stable:\s+([0-9.]+)\+snap([a-f0-9]+)\s/i
+              /^\s*([a-z]+)\/stable:\s+([0-9.]+)\+snap([a-f0-9]+)\s/
             );
             if (!m) {
               core.setFailed('Failed to parse channel line');
@@ -87,7 +88,7 @@ jobs:
        with: 
           script: |
             const target = '${{ steps.snap.outputs.commit }}'.slice(0, 7);  // 7-char prefix
-            core.info(`Looking for a commit starting with "${target}" …`);
+            core.info(`Looking for a commit starting with "${target}" ...`);
             const commits = await github.paginate(
               github.rest.repos.listCommits,
               {
@@ -98,57 +99,65 @@ jobs:
             );
             const hit = commits.find(c => c.sha.startsWith(target));
             if (hit) {
-              core.info(`Found commit: ${hit.sha} — ${hit.html_url}`);
+              core.info(`Found commit: ${hit.sha} - ${hit.html_url}`);
               // Print first line of the commit message
               const firstLine = hit.commit.message.split('\n')[0];
               core.info(`Commit message first line: "${firstLine}"`);
             } else {
               core.setFailed(`No commit starting with "${target}" found in the repository`);
             }
-     - name: Move latest tag to verified commit
+     # Create or update tag pointing to the verified commit
+       # If the tag doesn't exist, create it
+       # If the tag exists, but it points to a different commit, update it (move it forward)
+       # If it already exists but points to the correct commit, do nothing     
+     - name: Create or update stable tag for verified commit
        uses: actions/github-script@v7
        with:
          script: |
-           const target = '${{ steps.snap.outputs.commit }}'.slice(0, 7);
-           core.info(`Looking for a commit starting with "${target}" …`);
-           const commits = await github.paginate(
-           github.rest.repos.listCommits,
-           {
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            per_page: 100
-           }
-           );
-           const hit = commits.find(c => c.sha.startsWith(target));
-           if (!hit) {
-           core.setFailed(`No commit starting with "${target}" found in the repository`);
-           return;
-            }
-           core.info(`Found commit: ${hit.sha} — ${hit.html_url}`);
-           const firstLine = hit.commit.message.split('\n')[0];
-           core.info(`Commit message first line: "${firstLine}"`);
-           // Fetch latest tag (sorted by commit recency)
+           const commitSha = '${{ steps.snap.outputs.commit }}';
+           const codeName = '${{ steps.snap.outputs.codeName }}';
+           const version = '${{ steps.snap.outputs.version }}';
+           const stableTag = `v${version}+${codeName}`;
+           core.info(`Proposed stable tag: ${stableTag}`);
+
+           // Get existing tags
            const tags = await github.paginate(
-           github.rest.repos.listTags,
-           {
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            per_page: 100
+             github.rest.repos.listTags,
+               {
+                 owner: context.repo.owner,
+                 repo: context.repo.repo,
+                 per_page: 100
+               }
+            );
+
+           const existingTag = tags.find(t => t.name === stableTag);
+
+             if (existingTag) {
+               core.info(`Tag "${stableTag}" already exists.`);
+             if (existingTag.commit.sha === commitSha) {
+               core.info(`It already points to the correct commit (${commitSha}). Nothing to do.`);
+             return;
+           } else {
+             core.info(`Tag "${stableTag}" points to a different commit (${existingTag.commit.sha}). Updating to ${commitSha}...`);
+             await github.rest.git.updateRef({
+               owner: context.repo.owner,
+               repo: context.repo.repo,
+               ref: `tags/${stableTag}`,
+               sha: commitSha,
+               force: true
+             });
+             core.info(`Tag "${stableTag}" updated to point to ${commitSha}.`);
+             return;
+            }
            }
-           );
-           if (!tags.length) {
-           core.setFailed('No tags found in the repository');
-           return;
-           }
-           const latestTag = tags[0];
-           const refName = `tags/${latestTag.name}`;
-           core.info(`Moving latest tag "${latestTag.name}" from ${latestTag.commit.sha} → ${hit.sha}`);
-           await github.rest.git.updateRef({
-           owner: context.repo.owner,
-           repo: context.repo.repo,
-           ref: refName,
-           sha: hit.sha,
-           force: true
+
+           // Create tag if it doesn't exist
+           core.info(`Creating new tag "${stableTag}" pointing to commit ${commitSha}`);
+           await github.rest.git.createRef({
+             owner: context.repo.owner,
+             repo: context.repo.repo,
+             ref: `refs/tags/${stableTag}`,
+             sha: commitSha
            });
-           core.info(`Tag "${latestTag.name}" now points to ${hit.sha}`);
+           core.info(`Tag "${stableTag}" created successfully.`);
   
